# OxfordAPI

./: .gitignore  LICENSE  OxfordDictionaries.py  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
oxford/: OxfordDictionaries.py  api.py
oxfordapi/: __init__.py  api.py
oxforddictionaries/: __init__.py  api.py  caching_language_dictionary.py  oxford_api.py  oxford_api_v1.py  oxford_api_v2.py  tests.py  util.py  words.py
oxforddictionaries/tests/: oxford_api_v1.py
